<resources>
    <string name="app_name">Management Tool</string>
    <string name="title_activity_arrowhead_services">Services</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_connection">No internet connection!</string>
    <string name="no_data_available">No entry</string>
    <string name="title_activity_arrowhead_service__detail">Service details</string>
    <string name="service_group_label">Service group:</string>
    <string name="service_definition_label">Service definition:</string>
    <string name="interfaces_label">Interfaces:</string>
    <string name="no_interface_text">This service has no interfaces stored in the database.</string>
    <string name="interfaces_edit_label">Comma separated interface list:</string>
    <string name="save_changes">Save changes</string>
    <string name="service_update_request">Service update request has been sent…</string>
    <string name="service_update_error">Service update unsuccessful, server side error.</string>
    <string name="service_update_success">Service update is successful.</string>
    <string name="service_delete_request">Service delete request has been sent…</string>
    <string name="deleted">Deleted</string>
    <string name="service_delete_error">Deleting service unsuccessful, server side error.</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="server_error">Server Error</string>
    <string name="server_side_error">Error on the server side!</string>
    <string name="dismiss">Dismiss</string>
    <string name="status_code">Status code:</string>
    <string name="error_message">Error message:</string>
    <string name="action_add_service">Add Service</string>
    <string name="action_add_core_system">Add Core System</string>
    <string name="action_add_cloud">Add Cloud</string>
    <string name="save_service">Save service</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_service_title">Add a new service</string>
    <string name="add_service_successful">Successfully saved the new service.</string>
    <string name="add_system_successful">Successfully saved the new system.</string>
    <string name="add_core_system_successful">Successfully saved the new core system.</string>
    <string name="add_cloud_successful">Successfully saved the new cloud.</string>
    <string name="title_activity_arrowhead_systems">Systems</string>
    <string name="system_group_label">System group:</string>
    <string name="system_name_label">System name:</string>
    <string name="address_label">Address:</string>
    <string name="port_label">Port:</string>
    <string name="auth_info_label">Authentication info:</string>
    <string name="add_new_system_title">Add a new system</string>
    <string name="action_add_system">Add System</string>
    <string name="nav_arrowhead_systems">Arrowhead Systems</string>
    <string name="nav_arrowhead_services">Arrowhead Services</string>
    <string name="title_activity_arrowhead_systems__detail">System Details</string>
    <string name="action_search">Search</string>
    <string name="action_scan_qr_code">Scan QR Code</string>
    <string name="qr_code_scanner_dialog_title">QR Code Scanner</string>
    <string name="qr_code_scanner_text">This feature of the Management Tool scans QR codes which can identify an ArrowheadSystem. If a scan is successful, the details of the scanned system will be shown.\nFor this feature, the Management Tool uses a lightweight 3rd party app, which does the actual QR code scanning. You can download it now to use this feature of the Management Tool.</string>
    <string name="take_me_there">Take me there</string>
    <string name="no_thanks">No, thanks</string>
    <string name="consumer_auth_rights_text">System can consume:</string>
    <string name="provider_auth_rights_text">System can provide:</string>
    <string name="consumer_default_configs_text">Consumer Side Default Configurations</string>
    <string name="provider_default_configs_text">Provider Side Default Configurations</string>
    <string name="priority">Priority:</string>
    <string name="consumer_store_based_text">Consumer Side Store Entries</string>
    <string name="provider_store_based_text">Provider Side Store Entries</string>
    <string name="arrowhead_logo">Arrowhead Logo</string>
    <string name="system_update_success">System update is successful.</string>
    <string name="core_system_update_success">Core system update is successful.</string>
    <string name="cloud_update_success">Cloud update is successful.</string>
    <string name="system_update_request">System update request has been sent…</string>
    <string name="core_system_update_request">Core system update request has been sent…</string>
    <string name="cloud_update_request">Cloud update request has been sent…</string>
    <string name="nav_arrowhead_clouds">Arrowhead Clouds</string>
    <string name="nav_core_config_title">Core Configuration</string>
    <string name="nav_core_systems">Core Systems</string>
    <string name="nav_neighborhood_clouds">Neighborhood Clouds</string>
    <string name="nav_own_cloud">Own Cloud</string>
    <string name="nav_intracloud_auth">Intracloud Authorizations</string>
    <string name="intercloud_auth">Intercloud Authorizations</string>
    <string name="nav_orch_store">Orchestration Store</string>
    <string name="nav_service_registry">Service Registry</string>
    <string name="title_activity_arrowhead_clouds">Clouds</string>
    <string name="title_activity_core_systems">Core Systems</string>
    <string name="title_activity_arrowhead_cloud__detail">Cloud Details</string>
    <string name="title_activity_core_system__detail">Core System Details</string>
    <string name="not_implemented_yet">Not implemented yet!</string>
    <string name="operator_label">Operator:</string>
    <string name="cloud_name_label">Cloud name:</string>
    <string name="gatekeeper_service_uri_label">Gatekeeper service URI:</string>
    <string name="add_new_cloud_title">Add a new cloud</string>
    <string name="service_uri_label">Service URI:</string>
    <string name="mandatory_fields_warning">Please do not leave mandatory fields empty.</string>
    <string name="operator_label_mandatory">Operator*:</string>
    <string name="cloud_name_label_mandatory">Cloud name*:</string>
    <string name="system_name_label_mandatory">System name*:</string>
    <string name="service_group_label_mandatory">Service group*:</string>
    <string name="service_definition_label_mandatory">Service definition*:</string>
    <string name="system_group_label_mandatory">System group*:</string>
    <string name="title_activity_first_launch_screen">Arrowhead Management Tool</string>
    <string name="welcome">WELCOME</string>
    <string name="api_module_address_hint">API module address*</string>
    <string name="log_module_address_hint">Log module address</string>
    <string name="keystore_file_location_hint">Keystore file location</string>
    <string name="confirm">Confirm</string>
</resources>
