<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_arrowhead_systems"
            android:icon="@drawable/ic_laptop_mac_black_24dp"
            android:title="@string/nav_arrowhead_systems" />
        <item
            android:id="@+id/nav_arrowhead_services"
            android:title="@string/nav_arrowhead_services" />
        <item
            android:id="@+id/nav_arrowhead_clouds"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/nav_arrowhead_clouds" />
    </group>

    <item android:title="@string/nav_core_config_title">
        <menu>
            <item
                android:id="@+id/nav_core_systems"
                android:icon="@drawable/ic_laptop_mac_black_24dp"
                android:title="@string/nav_core_systems" />
            <item
                android:id="@+id/nav_neighborhood_clouds"
                android:icon="@drawable/ic_cloud_black_24dp"
                android:title="@string/nav_neighborhood_clouds" />
            <item
                android:id="@+id/nav_own_cloud"
                android:icon="@drawable/ic_cloud_black_24dp"
                android:title="@string/nav_own_cloud" />
        </menu>
    </item>

    <group android:id="@+id/authorization">
        <item
            android:id="@+id/nav_intracloud_auth"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/nav_intracloud_auth" />
        <item
            android:id="@+id/nav_intercloud_auth"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/intercloud_auth" />
    </group>

    <group android:id="@+id/singles">
        <item
            android:id="@+id/nav_orch_store"
            android:title="@string/nav_orch_store" />
        <item
            android:id="@+id/nav_service_registry"
            android:title="@string/nav_service_registry" />
    </group>

</menu>
