<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/system_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_group_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/system_group_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/system_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_name_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/system_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/port_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_label"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/port_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/auth_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_info_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/auth_info_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

</LinearLayout>
