<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_arrowhead_service__detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eu.arrowhead.managementtool.activities.ArrowheadService_Detail"
    tools:showIn="@layout/activity_arrowhead_service__detail">

    <TextView
        android:id="@+id/service_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_group_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/service_group_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/service_definition_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_definition_label"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/service_definition_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <TextView
        android:id="@+id/interfaces_edit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interfaces_edit_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/interfaces_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

</LinearLayout>
