<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/system_detail_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/system_group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_group_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ViewSwitcher
            android:id="@+id/system_group_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/system_group_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_divider_line"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/system_group_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </ViewSwitcher>

        <TextView
            android:id="@+id/system_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_name_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ViewSwitcher
            android:id="@+id/system_name_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/system_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_divider_line"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/system_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </ViewSwitcher>

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ViewSwitcher
            android:id="@+id/address_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_divider_line"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/address_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </ViewSwitcher>

        <TextView
            android:id="@+id/port_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ViewSwitcher
            android:id="@+id/port_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/port_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_divider_line"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/port_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </ViewSwitcher>

        <TextView
            android:id="@+id/auth_info_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_info_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ViewSwitcher
            android:id="@+id/auth_info_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/auth_info_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_divider_line"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/auth_info_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <Button
                    android:id="@+id/save_changes_button"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/save_changes"
                    android:textSize="20sp" />
            </LinearLayout>

        </ViewSwitcher>

    </LinearLayout>

</ScrollView>
