<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.arrowhead.managementtool.fragments.SystemDefaultConfig">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/consumer_default_configs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumer_default_configs_text"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ViewSwitcher
            android:id="@+id/consumer_default_config_switcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/consumer_default_config_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <!-- TODO imageview-val custom icon text helyett mutatósabb-->
            <TextView
                android:id="@+id/consumer_default_config_list_empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data_available"
                android:textSize="25sp" />

        </ViewSwitcher>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/provider_default_configs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_default_configs_text"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ViewSwitcher
            android:id="@+id/provider_default_config_switcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/provider_default_config_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <!-- TODO imageview-val custom icon text helyett mutatósabb-->
            <TextView
                android:id="@+id/provider_default_config_list_empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data_available"
                android:textSize="25sp" />

        </ViewSwitcher>

    </LinearLayout>

</LinearLayout>
