<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eu.arrowhead.managementtool.activities.FirstLaunchScreen"
    tools:showIn="@layout/activity_first_launch_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:drawableEnd="@drawable/ic_arrowhead_logo_black_48dp"
            android:drawablePadding="10dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:hintTextAppearance="@style/TextInputLayout">

            <EditText
                android:id="@+id/api_uri_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/api_module_address_hint"
                android:inputType="textUri" />

        </android.support.design.widget.TextInputLayout>

        <!--
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:hintTextAppearance="@style/TextInputLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/log_module_address_hint"
                android:inputType="textUri" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                app:hintTextAppearance="@style/TextInputLayout">

                <EditText
                    android:id="@+id/keystore_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/keystore_file_location_hint"
                    android:inputType="textUri" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/browse_button"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/browse"
                android:textSize="15sp" />

        </LinearLayout>
        -->

        <Button
            android:id="@+id/confirm_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm"
            android:textSize="25sp" />

    </LinearLayout>

</ScrollView>
